--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -21,72 +21,72 @@
   --color-primary-basis-kontrast: #fff;
   --color-primary-ci-hell: #04316A;
   --color-primary-ci-hell-kontrast: #fff;
-  --color-primary-ci-hell: #CED9E7;
-  --color-primary-ci-hell-kontrast: #000;
-  --color-primary-ci-hell: #004A9F;
-  --color-primary-ci-hell-kontrast: #fff;
-  --color-primary-ci-hell: #041E42;
-  --color-primary-ci-hell-kontrast: #fff;
+  --color-primary-ci-hell2: #CED9E7;
+  --color-primary-ci-hell2-kontrast: #000;
+  --color-primary-dunkler: #004A9F;
+  --color-primary-dunkler-kontrast: #fff;
+  --color-primary-dunkelste: #041E42;
+  --color-primary-dunkelste-kontrast: #fff;
   --color-zentral-basis: #04316A;
   --color-zentral-basis-kontrast: #fff;
   --color-zentral-ci-hell: #04316A;
   --color-zentral-ci-hell-kontrast: #fff;
-  --color-zentral-ci-hell: #CED9E7;
-  --color-zentral-ci-hell-kontrast: #000;
-  --color-zentral-ci-hell: #004A9F;
-  --color-zentral-ci-hell-kontrast: #fff;
-  --color-zentral-ci-hell: #041E42;
-  --color-zentral-ci-hell-kontrast: #fff;
+  --color-zentral-ci-hell2: #CED9E7;
+  --color-zentral-ci-hell2-kontrast: #000;
+  --color-zentral-dunkler: #004A9F;
+  --color-zentral-dunkler-kontrast: #fff;
+  --color-zentral-dunkelste: #041E42;
+  --color-zentral-dunkelste-kontrast: #fff;
   --color-phil-basis: #963B2F;
   --color-phil-basis-kontrast: #fff;
   --color-phil-ci-hell: #FDB735;
   --color-phil-ci-hell-kontrast: #000;
-  --color-phil-ci-hell: #F4E8CB;
-  --color-phil-ci-hell-kontrast: #000;
-  --color-phil-ci-hell: #E46D41;
-  --color-phil-ci-hell-kontrast: #000;
-  --color-phil-ci-hell: #963B2F;
-  --color-phil-ci-hell-kontrast: #fff;
+  --color-phil-ci-hell2: #F4E8CB;
+  --color-phil-ci-hell2-kontrast: #000;
+  --color-phil-dunkler: #E46D41;
+  --color-phil-dunkler-kontrast: #000;
+  --color-phil-dunkelste: #963B2F;
+  --color-phil-dunkelste-kontrast: #fff;
   --color-med-basis: #005287;
   --color-med-basis-kontrast: #fff;
   --color-med-ci-hell: #18B4F1;
   --color-med-ci-hell-kontrast: #000;
-  --color-med-ci-hell: #B9D9EC;
-  --color-med-ci-hell-kontrast: #000;
-  --color-med-ci-hell: #005287;
-  --color-med-ci-hell-kontrast: #fff;
-  --color-med-ci-hell: #003E61;
-  --color-med-ci-hell-kontrast: #fff;
+  --color-med-ci-hell2: #B9D9EC;
+  --color-med-ci-hell2-kontrast: #000;
+  --color-med-dunkler: #005287;
+  --color-med-dunkler-kontrast: #fff;
+  --color-med-dunkelste: #003E61;
+  --color-med-dunkelste-kontrast: #fff;
   --color-nat-basis: #266141;
   --color-nat-basis-kontrast: #fff;
   --color-nat-ci-hell: #7BB725;
   --color-nat-ci-hell-kontrast: #000;
-  --color-nat-ci-hell: #CFE0D8;
-  --color-nat-ci-hell-kontrast: #000;
-  --color-nat-ci-hell: #266141;
-  --color-nat-ci-hell-kontrast: #fff;
-  --color-nat-ci-hell: #14462D;
-  --color-nat-ci-hell-kontrast: #fff;
+  --color-nat-ci-hell2: #CFE0D8;
+  --color-nat-ci-hell2-kontrast: #000;
+  --color-nat-dunkler: #266141;
+  --color-nat-dunkler-kontrast: #fff;
+  --color-nat-dunkelste: #14462D;
+  --color-nat-dunkelste-kontrast: #fff;
   --color-rw-basis: #971B2F;
   --color-rw-basis-kontrast: #fff;
   --color-rw-ci-hell: #C50F3C;
   --color-rw-ci-hell-kontrast: #fff;
-  --color-rw-ci-hell: #F2DED1;
-  --color-rw-ci-hell-kontrast: #000;
-  --color-rw-ci-hell: #971B2F;
-  --color-rw-ci-hell-kontrast: #fff;
-  --color-rw-ci-hell: #662938;
-  --color-rw-ci-hell-kontrast: #fff;
+  --color-rw-ci-hell2: #F2DED1;
+  --color-rw-ci-hell2-kontrast: #000;
+  --color-rw-dunkler: #971B2F;
+  --color-rw-dunkler-kontrast: #fff;
+  --color-rw-dunkelste: #662938;
+  --color-rw-dunkelste-kontrast: #fff;
   --color-tf-basis: #2F586E;
   --color-tf-basis-kontrast: #fff;
   --color-tf-ci-hell: #8C9FB1;
   --color-tf-ci-hell-kontrast: #000;
-  --color-tf-ci-hell: #D3DDE6;
-  --color-tf-ci-hell-kontrast: #000;
-  --color-tf-ci-hell: #2F586E;
-  --color-tf-ci-hell-kontrast: #fff;
-  --color-tf-ci-hell: #204251;
-  --color-tf-ci-hell-kontrast: #fff;
+  --color-tf-ci-hell2: #D3DDE6;
+  --color-tf-ci-hell2-kontrast: #000;
+  --color-tf-dunkler: #2F586E;
+  --color-tf-dunkler-kontrast: #fff;
+  --color-tf-dunkelste: #204251;
+  --color-tf-dunkelste-kontrast: #fff;
   --color-Text: #444;
   --color-TextLight: #797676;
   --color-MetaTextDefault: #444;
