--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -87,7 +87,7 @@
             max-width: $container-xl - $subnav-width-lg - $grid-gutter-width;
         }
     }
-
+    /*
     .search-sidebar,
     .search-resultnested {
         max-width: 100%;
@@ -125,6 +125,7 @@
             padding: 0;
         }
     }
+    */
 
 }
 
@@ -225,10 +226,6 @@
 }
 
 /*-----------------------------------------------------------------------------------*/
-/* Template: Page with Subnav
-/*-----------------------------------------------------------------------------------*/
-
-/*-----------------------------------------------------------------------------------*/
 /* Post layout
 /*-----------------------------------------------------------------------------------*/
 
@@ -323,9 +320,23 @@
 /*-----------------------------------------------------------------------------------*/
 /* Template: Errorpages
 /*-----------------------------------------------------------------------------------*/
-
-
 .errorpage-content {
+    padding: 0 15px;
+    flex: 1 1 $screen-xs;
+
+    main {
+	padding-top: ceil(math.div($grid-gutter-width, 2));
+    }
+
+    @media (min-width: $screen-sm) {
+	padding-right: ceil(math.div($grid-gutter-width, 2));
+    }
+}
+
+/*-----------------------------------------------------------------------------------*/
+/* Template: Errorpages
+/*-----------------------------------------------------------------------------------*/
+.searchpage-content {
     padding: 0 15px;
     flex: 1 1 $screen-xs;
 
