--- a/src/sass/elements/_elements.scss
+++ b/src/sass/elements/_elements.scss
@@ -48,6 +48,9 @@
 // General Classes
 @import "general-classes";
 
+// WordPress Required Classes
+@import "buttons";
+
 // Global Selectors
 @import "selectors";
 
