--- a/src/sass/structure/content/_imagelink.scss
+++ b/src/sass/structure/content/_imagelink.scss
@@ -231,6 +231,7 @@
 		    background-color: var(--color-primary-ci-hell);
 		    
 		    border: 0;
+		    padding: 0;
 		    outline: none;
 
 		    &:hover, 
