--- a/src/sass/structure/widgets/_misc.scss
+++ b/src/sass/structure/widgets/_misc.scss
@@ -36,8 +36,8 @@
 	    @extend .fa;
 	    @extend .fa-angle-right;	
 	    font-weight: bold;
-	    color:  var(--color-primary-basis);
-	    width: 15px;
+	    color: var(--color-links);
+	    width: 1rem;
 	    display: table-cell;
 	}
 	
