--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -80,9 +80,7 @@
 .news-item {
 	margin-bottom: 11px;
 	
-	h2 {
-	    padding-bottom: 10px;
-	}
+
 	.news-meta {
 		padding: 5px 0;
 		margin-top: 0px;
@@ -130,41 +128,51 @@
 .news-item {
     .teaser-row {
 	display: flex;
-	flex-wrap: wrap;
 	align-items: flex-start;
+	flex-wrap: wrap;
 	
-	
+	@media (min-width: $screen-xs) {
+	    flex-wrap: nowrap;
+	}
 	.thumbnailregion {
 	    width: 100vw;
 	    text-align: center;
 	    padding: 0;
 	    margin-left: calc(-#{$fau-gutter-width} / 2);
 	    margin-right: calc(-#{$fau-gutter-width} / 2);
+	    // Auf kleinem Display setze die Bilder nahtlos an den Rand
 	    
 	    @media (min-width: $screen-xs) {
-		width: 100%;
-		max-width: 220px;
+		width: auto;
+		min-width: 220px;
 		margin-left: 0;
 		margin-right: 0;
 		margin-bottom: 0;		
 	    }
+	    @media (min-width: $screen-xl) {
+		min-width: 320px;
+	    }
 	    .passpartout {
-		 width: 100%;
-		 text-align: center;
-		 @media (min-width: $screen-sm) {
-		     width: 220px; 
-		 }
+		width: 100%;
+		text-align: center;
+		@media (min-width: $screen-sm) {
+		    width: 220px; 
+		}
+		@media (min-width: $screen-xl) {
+		    width: 320px;
+		}
 	     }  
 	}
 	.teaserregion {
-	    width: 100%;
+	    width: 100vw;
+	    
 	    @media (min-width: $screen-xs ) {
-		max-width: calc(100% - 250px);
-		padding-left: 20px;
+		width: auto;
 		p {
 		    display: inline;
 		}
 	    }
+	   
 	}
 	
 	.fullwidthregion {
