--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -110,7 +110,7 @@
   --color-MetaBackgroundLight: #eff1f4;
   --color-FAU: #04316A;
   --color-content-headlines: #444;
-  --color-links: #04316A;
+  --color-links: #444;
   --color-content-links: #444;
   --color-content-links-underline: #04316A;
   --color-content-links-hover: #fff;
