--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -184,7 +184,7 @@ Mixins File for Wordpress Theme FAU
 
     &:hover,
     &:focus {
-        font-weight: bold;
+ //       font-weight: bold;
         color: inherit;
         box-shadow: inherit;
         text-decoration: underline;
