--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -61,8 +61,6 @@ $colormap-primary: $colormap-zentral;
 
 $colorPrimary:		map-get($colormap-primary, "basis");
 $colorPrimaryContrast:  map-get($colormap-primary, "basis-kontrast");
-$PalettonHellste:	map-get($colormap-primary, "hellste");
-$PalettonHeller:	map-get($colormap-primary, "heller");
 $PalettonDunkler:	map-get($colormap-primary, "dunkler");
 $PalettonDunkelste:	map-get($colormap-primary, "dunkelste");
 
@@ -70,7 +68,7 @@ $colormaps: ("primary": $colormap-primary, "zentral": $colormap-zentral, "phil":
 
 // Content
 $color-content-headlines:   map-get($colormap-misc, "Text");
-$color-links:		    map-get($colormap-primary, "basis");
+$color-links:		    map-get($colormap-misc, "Text");
 $color-content-links:	    map-get($colormap-misc, "Text");
 $color-content-links-underline:	    map-get($colormap-primary, "ci-hell");
 $color-content-links-hover: map-get($colormap-primary, "ci-hell-kontrast");
@@ -133,11 +131,6 @@ $colorMainBackground:	map-get($colormap-misc, "MainBackground");
 $colorShadows:	rgba(135,132,135,1);
 // Color for shadows
 
-// Hinweis: Für SVG-Grafiken brauchen wir den HEX-Code direkt und können nicht Custom Properies nutzen!
-$socialmedia_icon_bgcolor_hover: map-get($colormap-primary, "ci-hell-kontrast");
-$socialmedia_icon_color:	map-get($colormap-primary, "ci-hell-kontrast");
-$socialmedia_icon_color_hover:	map-get($colormap-primary, "ci-hell");
-
 
 
 $colorOverlayLight: rgba(255, 255, 255, 0.15);
@@ -163,6 +156,17 @@ $color_button_text:	map-get($colormap-primary, "dunkler-kontrast");
 $color_button_bg:	map-get($colormap-primary, "dunkler");
 $color-button-hover-text:	map-get($colormap-primary, "dunkelste-kontrast");
 $color-button-hover-bg:	map-get($colormap-primary, "dunkelste");
+
+
+// Hinweis: Für SVG-Grafiken brauchen wir den HEX-Code direkt und können nicht Custom Properies nutzen!
+$socialmedia_icon_bgcolor_hover: map-get($colormap-primary, "ci-hell-kontrast");
+$socialmedia_icon_color:	map-get($colormap-primary, "ci-hell-kontrast");
+$socialmedia_icon_color_hover:	map-get($colormap-primary, "ci-hell");
+
+$svg-icon-size: 1.4rem;
+$svg-icon-color: $color_button_text;
+$svg-icon-color_hover: $color-button-hover-text;
+$socialmedia_icon_size: 1.8rem;
 
 
 // Define fonts
@@ -308,6 +312,10 @@ $slick-opacity-not-active: 0.25 !default;
 
 $slick-opacity-text-background: 0.8;
 $slick-opacity-text-shadow: 0px 0px 4px #000;
+
+
+
+
 // Define breakpoints
 
 // iPhone 3G
