--- a/src/sass/structure/content/_gallery.scss
+++ b/src/sass/structure/content/_gallery.scss
@@ -347,7 +347,7 @@
 		    height: 1.5rem;
 		    cursor: pointer;
 		    border-radius: 50%;
-		    
+		    padding: 0;
 		    color: var(--color-primary-ci-hell-kontrast);
 		    background-color: var(--color-primary-ci-hell);
 		    
