--- a/src/sass/fau-theme-admin.scss
+++ b/src/sass/fau-theme-admin.scss
@@ -18,6 +18,11 @@ $font-path-awesome:	'../fonts/fontawesome/';
 $font-path-roboto:	'../fonts/roboto/';
 // da admin.css unter /css muss der pfad angepasst werden
 
+// SVG Icons and CI elements
+@import "icons/icons";
+
+
+
 @import "mixins/mixins";
 
 // Fonts
