--- a/src/sass/structure/content/_news-items.scss
+++ b/src/sass/structure/content/_news-items.scss
@@ -155,6 +155,13 @@
 		}
 	     }  
 	}
+	.thumbnailregion.fallback {
+	    display: none;
+	     @media (min-width: $screen-xs) {
+		 display: block;
+	     }
+	}
+	
 	.teaserregion {
 	    width: 100vw;
 	    
