--- a/src/sass/elements/_buttons.scss
+++ b/src/sass/elements/_buttons.scss
@@ -1,7 +1,7 @@
 /*-----------------------------------------------------------------------------------*/
 /* Buttons
 /*-----------------------------------------------------------------------------------*/
-button,
+button:not(.meta-links-trigger-button),
 input[type="button"],
 [role="button"] {
     @include buttonstyle();
